Made Java7 compatible